--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ strong{
   display: flex;
   background: rgba(82, 181, 247, 0.2);
   background: rgb(4 32 49 / 70%);
+  flex-wrap: wrap;
 }
 
 .card h1 {
@@ -86,17 +87,40 @@ strong{
 }
 
 .buttons {
-  clear: both;
   display: inline-block;
+  justify-self: flex-start;
+  align-self: flex-end;
   padding: 0;
-  display: none;
+  /* display: none; */
 }
 
 
 .button {
-  font-size: 3rem;
-  background: white;
+  color: white;
+  margin: 20px;
+  padding: 20px;
+  font-size: 32px;
+  background: rgb(48 56 74);
   display: inline-block;
+  border-radius: 25% 10%;
+  font-family: 'Fjalla One', sans-serif;
+  text-transform: uppercase;
+  transition-property: background box-shadow;
+  transition-duration: .2s, 1s;
+  transition-timing-function: linear;
+  text-shadow: 2px 2px 0px rgba(150, 150, 255, 1);
+ 
+}
+
+.button:hover {
+  background: #b8a9c7;
+  position: relative;
+  box-shadow: 10px 9px 2px 1px #18578e;
+}
+
+.button a {
+  color: inherit;
+  text-decoration: inherit;
 }
 
 .border{
@@ -178,37 +202,53 @@ strong{
 
 .projects .gallery {
   display: flex;
-  justify-content: center;
-  padding: 3.2rem;
-}
-
-.projects .gallery ul{
-  width: 900px;
-  display: flex;
   justify-content: space-around;
-  justify-self: center;
-  /* align-self: center; */
+  padding: 3.2rem;
+  width: 100%;
 }
 
-.projects .gallery li {
-  display: inline-flex;
+.projects .galleryElement {
+  width: 26rem;
+  /* display: flex; */
+  /* align-items: center; */
+  
 }
 
-.projects .gallery img {
-  min-width: 200px;
-  min-height: 300px;
-  width: 200px;
+.galleryElement h3 {
+  display: block;
+  font-size: 2.7rem;
+  font-weight: bold;
+  padding: 10px;
+  width: 100%;
+}
+
+.galleryElement p {
+  display: block;
+  font-size: 2.2rem;
+}
+
+
+
+
+
+.projects .galleryElement img {
+  min-width: 100%;
+  min-height: 50rem;
+  width: 100%;
   height: 300px;
-  position: relative;	
+  margin: 30px 0;
+  /* position: relative;	 */
   box-shadow: 23px 18px 2px 0px #c9ae2f;
-  transition-property: box-shadow;
+  transition-property: box-shadow transform;
   transition-duration: .2s, 1s;
   transition-timing-function: linear;
+  display: block;
+  align-self: center;
 }
 
 .projects .gallery img:hover {
-  position: relative;	
-  border: 2px solid black;
+  /* position: relative;	 */
+  transform: scale(1.1);
   box-shadow: 35px 33px 2px 0px #c9ae2f;
 }
 
@@ -219,3 +259,20 @@ footer {
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+.bigger {
+  display: inline-block;
+  transition-property: transform;
+  transition-duration: .2s, 1s;
+  transition-timing-function: linear;
+}
+
+.bigger:hover {
+  transform: scale(1.1);
+}
+
+.break {
+  flex-basis: 100%;
+  /* height: 10px; */
+  /* background: red; */
+}
