--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,86 @@ strong{
   margin: 10px 0;
 }
 
+.contact form .messageSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact form .messageSection textarea {
+  width: 100%;
+  height: 200px;
+}
+
+
+.submitButton {
+  background: red;
+  width: min-content;
+  border: none;
+  font-size: 20px;
+  justify-self: center;
+}
+
+.submitButton {
+  color: white;
+  border-radius: 3rem;
+
+  font-size: 32px;
+  background: rgb(255, 255, 255, 0);
+  display: inline-block;
+  font-family: 'Fjalla One', sans-serif;
+  text-transform: uppercase;
+  transition-property: background box-shadow;
+  transition-duration: .2s, 1s;
+  transition-timing-function: linear;
+  text-shadow: 2px 2px 0px rgba(150, 150, 255, 1);
+  padding: .5rem 2rem;
+}
+
+.submitButton:hover {
+  background: #b8a9c7;
+  position: relative;
+  box-shadow: 10px 9px 2px 1px #18578e;
+}
+
+.buttonSection {
+  display: flex;
+  justify-content: center;
+}
+
+
+/* button {
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 0;
+  text-decoration: none;
+  background: #0069ed;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+  background: #0053ba;
+}
+
+button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+button:active {
+  transform: scale(0.99);
+} */
+
 
 footer {
   background: black;
